--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       function render() {
         ctx.clearRect(0, 0, ww, wh);
         // 修改文字 想要多几个飘着的文字
-        var text = [ 'together forever', '李毅琳 I Love You','♥️','♥️']
+        var text = [ 'together forever', '','♥️','♥️']
         for (var i = 0; i < 100; i++) {
           hearts[i].update(i);
           hearts[i].draw(i, text[i % text.length]);
